--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,31 @@
         <title>Blank App</title>
     </head>
     <body>
+        <form id="friendlies">
+          Friendly name:<br>
+          <input type="text" name="name-f" value="name">
+          Friendly HP:<br>
+          <!--numbers only-->
+          <input type="text" name="hp-f" value="hp">
+          Friendly DMG:<br>
+          <!--numbers only -->
+          <input type="text" name="dmg-f" value="dmg">
+          <input type="submit" value="submit">
+        </form>
+
+        <form id="Baddies">
+          Baddie name:<br>
+          <input type="text" name="name-b" value="name">
+          Baddie HP:<br>
+          <!--numbers only-->
+          <input type="text" name="hp-b" value="hp">
+          Baddie DMG:<br>
+          <!--numbers only-->
+          <input type="text" name="dmg-b" value="dmg">
+          <input type="submit" value="submit">
+        </form>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
+<!-- group 7 -->
