Fixed forms in index.html

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -8,25 +8,25 @@
     <body>
         <form id="friendlies">
           Friendly name:<br>
-          <input type="text" name="name-f" value="name">
+          <input type="text" name="name-f" placeholder="name">
           Friendly HP:<br>
           <!--numbers only-->
-          <input type="text" name="hp-f" value="hp">
+          <input type="text" name="hp-f" placeholder="HP">
           Friendly DMG:<br>
           <!--numbers only -->
-          <input type="text" name="dmg-f" value="dmg">
+          <input type="text" name="dmg-f" placeholder="DMG">
           <input type="submit" value="submit">
         </form>
 
         <form id="Baddies">
           Baddie name:<br>
-          <input type="text" name="name-b" value="name">
+          <input type="text" name="name-b" placeholder="name">
           Baddie HP:<br>
           <!--numbers only-->
-          <input type="text" name="hp-b" value="hp">
+          <input type="text" name="hp-b" placeholder="HP">
           Baddie DMG:<br>
           <!--numbers only-->
-          <input type="text" name="dmg-b" value="dmg">
+          <input type="text" name="dmg-b" placeholder="DMG">
           <input type="submit" value="submit">
         </form>
         <script type="text/javascript" src="cordova.js"></script>
